--- a/index.html
+++ b/index.html
@@ -9,15 +9,237 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<style>
+    /* Font Family import here */
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800;900&display=swap');
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+        list-style: none;
+        font-family: 'Raleway', sans-serif;
+    }
+
+    html {
+        font-size: 62.5%;
+        overflow-x: hidden;
+    }
+
+    p,
+    a,
+    li {
+        overflow-x: hidden;
+    }
+
+    .wp-navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; /* Add this for vertical alignment */
+        height: 80px;
+        background-color: #000041;
+        padding: 0 20px; /* Add some padding for spacing */
+    }
+
+    .logo {
+        display: flex;
+        flex-direction: row;
+        align-items: center; /* Add this for vertical alignment */
+    }
+
+    .logo-image img {
+        width: 80px;
+        height: auto; /* Ensure the image scales proportionally */
+    }
+    .sub-title {
+        font-size: 1.3rem;
+        font-weight: 600;
+    }
+
+    .title {
+        font-size: 1.8rem;
+        font-weight: 800;
+    }
+
+    .menu {
+        display: flex;
+        justify-content: space-around;
+        margin: 1.3rem 0 1.5rem 0;
+        align-items: center; /* Add this for vertical alignment */
+    }
+
+    .button {
+        width: 20rem;
+        height: 5rem;
+        align-items: center;
+        cursor: pointer;
+        font-size: 1.8rem;
+        border-radius: 0.9rem;
+        transition: transform 0.3s ease;
+        display: flex; /* Add this to center button content horizontally */
+    }
+
+    .button-call {
+        font-size: 18px;
+        opacity: 2;
+        background-color: #000041;
+        color: white;
+        border: none;
+        font-weight: 800;
+    }
+
+    .button-account {
+        background-color: #000041;
+        border: 1px solid white;
+        width: 15rem;
+        margin: 0 2rem;
+        opacity: 2;
+        font-size: 1.5rem;
+        padding: 1rem 0.8rem;
+        color: white;
+        font-weight: 700;
+    }
+
+    .fa-solid {
+        font-size: 2.5rem;
+        color: white;
+        margin-left: 2rem;
+    }
+
+    .button:hover {
+        color: #FFEE00;
+        transform: translateY(-0.5rem);
+    }
+
+    .button-account:hover {
+        background-color: #FFEE00;
+        color: #000041;
+        font-weight: 700;
+    }
+
+    .fa-phone {
+        color: #FFEE00;
+    }
+
+    .fa-bars {
+        margin-right: 2rem;
+        margin-top: 1.5rem;
+        font-size: 3rem;
+        cursor: pointer;
+        transition: transform 0.3s ease;
+    }
+
+    .fa-bars:hover {
+        color: #FFEE00;
+        transform: translateY(-0.5rem);
+    }
+
+    .navbar {
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateX(100%);
+        background-color: white; /* Add background color to the navbar */
+    }
+
+    .nav-first {
+        width: 40%;
+        max-width: 42rem;
+        min-width: 32rem;
+        background-color: #FFEE00;
+    }
+
+    .nav-second {
+        background-color: #fff;
+        width: 95%;
+    }
+
+    .nav-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 95%;
+        background-color: #000041;
+    }
+
+    .nav-list ul {
+        display: flex;
+        flex-direction: column;
+        gap: 2.4rem;
+    }
+
+    .navbar a {
+        font-size: 1.9rem;
+        /* text-transform: uppercase; */
+        font-weight: 800;
+        color: #fff;
+        transition: transform 0.3s ease;
+    }
+
+    .navbar a:hover {
+        transform: translateY(-0.5rem);
+        color: #ffee00;
+    }
+
+    .active {
+        transform: translateX(0);
+    }
+
+    .fa-square-xmark {
+        position: absolute;
+        top: 10%;
+        right: 15%;
+        font-size: 3.2rem;
+        cursor: pointer;
+        color: #fff;
+        transition: transform 0.3s ease;
+    }
+
+    .fa-square-xmark:hover {
+        color: #FFEE00;
+        transform: translateY(-0.5rem);
+    }
+
+    .social-links {
+        position: absolute;
+        bottom: 10%;
+    }
+
+    .social-links i {
+        margin-left: 2rem;
+        font-size: 3rem;
+        transition: transform 0.3s ease;
+        margin-bottom: 2rem;
+    }
+
+    .social-links i:hover {
+        color: #FFEE00;
+        transform: translateY(-.5rem);
+    }
+
+    .site-link a {
+        font-size: 1.2rem;
+        margin-left: 1rem;
+        margin-top: 1.5rem;
+        color: #FFEE00;
+    }
+
+    .site-link a:hover {
+        color: #fff;
+    }
+</style>
+
 <body>
     <nav class="wp-navbar">
         <div class="logo">
             <div class="logo-image">
                 <img src="assets/lOGO PNG.png" alt="Oh!MyPlace.Com Logo Image">
             </div>
-            
         </div>
-        
+
         <div class="menu">
             <button class="button button-call">
                 <i class="fa-solid fa-phone"></i>
@@ -37,7 +259,6 @@
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Oh! Blog</a></li>
                             <li><a href="#">Contact Us</a></li>
-
                         </ul>
                         <div class="social-links">
                             <a href="#Facebook"><i class="fa-brands fa-facebook"></i></a>
@@ -55,6 +276,15 @@
             </div>
         </div>
     </nav>
+    <!-- ENDING NAVIGATION HEADER -->
+
+    <!-- STARTING HERO SECTION HERE -->
+    <section class="hero">
+        <div class="main-hero">
+            <h1>HI I am!</h1>
+        </div>
+    </section>
+
     <script>
         console.log('I am Working Guys');
         const open_menu = document.querySelector('.fa-bars'); // Use ".fa-bars" for class selection
@@ -67,13 +297,11 @@
             });
         });
 
-
         close_menu.addEventListener('click', () => { // Use lowercase "click" for the event
             nav_active.forEach((eleme) => {
                 eleme.classList.remove('active');
             });
         });
-
     </script>
 </body>
 
